[package]
name = "ruma-bot"
version = "0.1.0"
authors = ["Jonas Platte <jplatte+git@posteo.de>"]
edition = "2018"

[dependencies]
anymap = "0.12.1"
failure = "0.1.5"
futures-preview = "=0.3.0-alpha.19"
hyper = { version = "=0.13.0-alpha.4", features = ["unstable-stream"] }
hyper-tls = { version = "=0.4.0-alpha.4", optional = true }
ruma-client = { git = "https://github.com/ruma/ruma-client" }
tokio = "=0.2.0-alpha.6"
url = "2.1.0"

[dependencies.ruma-bot-macros]
path = "macros"

#[patch.'https://github.com/ruma/ruma-client-api'.ruma-client-api]
# Cargo doesn't allow using a different branch of the same repository. Trick it into thinking that
# we're using a different repository.
#git = "https://github.com/ruma//ruma-client-api.git"
#branch = "request-ctors"

[workspace]
members = ["macros"]
